# cnn_SemanticSegmentation

./: README.md  data.lua  donkeyBB.lua  donkeyFinalTest.lua  donkeyPascal.lua  donkeyPascalTest.lua  donkeyStage1.lua  donkeyStage2.lua  donkeyTemplate.lua  logger.lua  main.lua  makeBNTestable.lua  model.lua  opts.lua  report.html  test.lua  testBB.lua  testBB_fast.lua  train.lua  util.lua  val.lua
models/: Deconv.lua  FCN.lua  MirrorNet.lua  Resnet.lua  ResnetBN.lua  ResnetBNShortcut.lua  ResnetShortcut.lua  ResnetVGG.lua  ReverseBN.lua  ReverseBNShortcut.lua  VGG_ILSVRC_16_layers_conv_deploy.prototxt.lua  allShare.lua  badDeconv.lua  loadImageNetModel.lua  noShare.lua  shortDeconv.lua  shortcutShare.lua  stackShare.lua
robot/: CMakeLists.txt
robot/src/: classifyImage.lua  main.cpp
tmpFiles/: imageSaverForDoublesCheck.lua  makeBNTestable.lua  mirror.lua  myDataLoader.lua  mySpatialCrossEntropyCriterion.lua  stringComparison.lua  testFullData.lua  time_script.lua  trainFullData.lua
